# mousetube_APIv0-5

./: .gitignore  404.html  Dockerfile  README.md  docker-compose.prod-ifb.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  index.html  manage.py  objects.inv  pyproject.toml  requirements.txt  setup.sh  setup_mariadb.sh  sitemap.xml  update.sh
.github/workflows/: ci.yml
api/python/: index.html
api/rest/: index.html
documentation/: mkdocs.yml
documentation/docs/: index.md  vocalizations.md
documentation/docs/api/: python.md  rest.md
documentation/docs/stylesheets/: custom.css
mousetube_API/: asgi.py  models.py  serializers.py  settings.py  urls.py  wsgi.py
mousetube_api/: __init__.py  admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
mousetube_api/management/commands/: audio_to_image.py  check_dead_links.py  clear_dump.py  export_data.py  export_page_view.py  fill_audio_image.py  migrate_contact_to_user.py
mousetube_api/templates/admin/: base_site.html
nginx/: Dockerfile  entrypoint.sh
nginx/conf.d/: default.conf.template
search/: search_index.json
vocalizations/: index.html
