[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mousetube_api"
version = "0.5"
description = "mousetube allows the exchange of mouse vocalisation recording files."
authors = [
    {name = "Nicolas Torquet", email = "nicolas.torquet@igbmc.com" },
    {name = "Laurent Bouri", email = "laurent.bouri@igbmc.fr"},
    ]
dependencies = [
    "Django==5.1.7",
    "djangorestframework==3.16.0",
    "djoser==2.3.1",
    "django-cors-headers==4.7.0",
    "mysqlclient==2.2.7",
    "django-environ==0.12.0",
    "drf-spectacular==0.28.0"
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
mousetube_api = "mousetube_api:manage"

[tool.setuptools.packages.find]
include = ["mousetube_api*"]